# hh

./: .bandit  .flake8  .gitignore  .sqlfluff  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
crud/: crud.py
db/: database.py
exceptions/: exceptions.py
hooks/: hooks.py
models/: models.py
schemas/: schemas.py
sql/: Dockerfile
tests/: conftest.py
tests/integration/: test_hh_integration.py  test_main_integration.py
tests/unit/: test_hh_crud.py  test_main.py
