[tool.poetry]
name = "hobbyhorsing"
version = "0.1.0"
description = ""
authors = ["Your Name you@example.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
sqlalchemy = "^2.0.43"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.2"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
sqlfluff = "^4.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
bandit = "^1.7.10"
black = ">=25.1.0,<26.0.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | \.mypy_cache
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
